# Cleaner

./: .env.example  .gitignore  COLAB.md  Cleaner_colab.ipynb  Makefile  README.md  app.py  pyproject.toml  requirements-colab.txt  requirements.txt
.github/workflows/: tests.yml
scripts/: colab_pipeline_check.py  create_demo_labels.py  create_demo_photos.py  export_label_template.py  import_labels.py  run_pipeline.py
src/cleaner/: __init__.py  config.py  embeddings.py  encoder.py  features.py  labeling.py  model.py  notebook.py  recommendations.py  rewards.py  storage.py  utils.py
src/cleaner/ui/: recommendations.py  rewards.py  sidebar.py  swipe.py
tests/: test_features.py  test_labeling.py  test_rewards.py
