[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleaner"
version = "0.1.0"
description = "Swipe-based personal photo decluttering AI MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35",
    "pillow>=10.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "torch>=2.1",
    "open-clip-torch>=2.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
colab = [
    "pytest>=8.0",
    "portpicker>=1.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
